force-app/main/default/objects/CaseDetail__c/CaseDetail__c.object-meta.xml
<CustomObject>
    <description>Objeto auxiliar ao objeto Caso (Case), que armazena os campos das jornadas de minhas solicitações recebidos através do fluxo do App Vivo. Projeto Minhas Solicitações PTI4728</description>
    <label>Detalhe do Caso</label>
    <nameField>
        <displayFormat>DC - {00000000}</displayFormat>
        <label>Número do Detalhe do Caso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalhes dos Casos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>