force-app/main/default/objects/CaseDetail__c/fields/AddresNumber__c.field-meta.xml
<CustomField>
    <fullName>AddresNumber__c</fullName>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>