force-app/main/default/objects/CaseDetail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(ISBLANK(Street__c), &quot;&quot;, Street__c) +
IF(ISBLANK(AddresNumber__c), &quot;&quot;, &quot;, &quot; + AddresNumber__c) +
IF(ISBLANK(Neighborhood__c), &quot;&quot;, &quot;, &quot; + Neighborhood__c) +
IF(ISBLANK(City__c), &quot;&quot;, &quot;, &quot; + City__c) +
IF(ISBLANK(State__c), &quot;&quot;, &quot;, &quot; + State__c) +
IF(ISBLANK(CEP__c), &quot;&quot;, &quot;, &quot; + CEP__c) +
IF(ISBLANK(ReferencePoint__c), &quot;&quot;, &quot;, &quot; + ReferencePoint__c) +
IF(ISBLANK(Complement__c), &quot;&quot;, &quot;, &quot; + Complement__c)</formula>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>