force-app/main/default/objects/CaseDetail__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Cidade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>