force-app/main/default/objects/CaseDetail__c/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <label>Complemento</label>
    <type>TextArea</type>
</CustomField>