force-app/main/default/objects/CaseDetail__c/fields/DateOption1__c.field-meta.xml
<CustomField>
    <fullName>DateOption1__c</fullName>
    <inlineHelpText>Escolha a data que deseja agendar o atendimento.</inlineHelpText>
    <label>1° Opção de Data</label>
    <type>Date</type>
</CustomField>