force-app/main/default/objects/CaseDetail__c/fields/DateOption2__c.field-meta.xml
<CustomField>
    <fullName>DateOption2__c</fullName>
    <inlineHelpText>Escolha a data que deseja agendar o atendimento.</inlineHelpText>
    <label>2° Opção de Data</label>
    <type>Date</type>
</CustomField>