force-app/main/default/objects/CaseDetail__c/fields/haveAddressNumber__c.field-meta.xml
<CustomField>
    <fullName>haveAddressNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não tem Número</label>
    <type>Checkbox</type>
</CustomField>