force-app/main/default/objects/CaseDetail__c/fields/LastSourceSystemAgent__c.field-meta.xml
<CustomField>
    <fullName>LastSourceSystemAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo indica quem foi o último atendente a trabalhar no seu caso. Ao registrar essa informação, conseguimos acompanhar melhor o histórico de atendimento.</description>
    <label>Último agente do sistema origem</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseDetails</relationshipName>
    <type>Lookup</type>
</CustomField>