force-app/main/default/objects/CaseDetail__c/fields/ModifyBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>ModifyBillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecione a opção desejada.</inlineHelpText>
    <label>Quero Mudar o Endereço de Cobrança</label>
    <type>Checkbox</type>
</CustomField>