force-app/main/default/objects/CaseDetail__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Bairro</label>
    <type>TextArea</type>
</CustomField>