force-app/main/default/objects/CaseDetail__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Número do Pedido</label>
    <type>TextArea</type>
</CustomField>