force-app/main/default/objects/CaseDetail__c/fields/PeriodOption1__c.field-meta.xml
<CustomField>
    <fullName>PeriodOption1__c</fullName>
    <label>Opção de Período 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manhã, entre 08h e 12h</fullName>
            </value>
            <value>
                <fullName>Tarde, entre 13h e 18h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>