force-app/main/default/objects/CaseDetail__c/fields/Portabilitysystem__c.field-meta.xml
<CustomField>
    <fullName>Portabilitysystem__c</fullName>
    <description>O nome do sistema que a portabilidade esta sendo executada</description>
    <label>Sistema de portabilidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>