force-app/main/default/objects/CaseDetail__c/fields/ReferencePoint__c.field-meta.xml
<CustomField>
    <fullName>ReferencePoint__c</fullName>
    <label>Ponto de Referência</label>
    <type>TextArea</type>
</CustomField>