force-app/main/default/objects/CaseDetail__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <label>Data Agendada</label>
    <type>Date</type>
</CustomField>