force-app/main/default/objects/CaseDetail__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Rua</label>
    <type>TextArea</type>
</CustomField>