force-app/main/default/objects/CaseDetail__c/fields/TrackingCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingCaseNumber__c</fullName>
    <description>Número do Caso de Acompanhamento &quot;Caso de HDE&quot;</description>
    <label>Número do Caso de Acompanhamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>