force-app/main/default/objects/CaseDetail__c/fields/WithoutComplement__c.field-meta.xml
<CustomField>
    <fullName>WithoutComplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sem Complemento</label>
    <type>Checkbox</type>
</CustomField>