force-app/main/default/objects/CaseDetail__c/recordTypes/ChangeOfAddress.recordType-meta.xml
<RecordType>
    <fullName>ChangeOfAddress</fullName>
    <active>true</active>
    <label>Mudança de Endereço</label>
</RecordType>