force-app/main/default/objects/CaseDetail__c/recordTypes/Helpwithbilling.recordType-meta.xml
<RecordType>
    <fullName>Helpwithbilling</fullName>
    <active>true</active>
    <label>Ajuda com cobrança</label>
</RecordType>