force-app/main/default/objects/CaseDetail__c/recordTypes/HelpWithInvoicingorBilling.recordType-meta.xml
<RecordType>
    <fullName>HelpWithInvoicingorBilling</fullName>
    <active>true</active>
    <label>Ajuda com Fatura ou Cobrança</label>
</RecordType>