force-app/main/default/objects/CaseDetail__c/recordTypes/HelpWithTheOrder.recordType-meta.xml
<RecordType>
    <fullName>HelpWithTheOrder</fullName>
    <active>true</active>
    <label>Ajuda com o Pedido</label>
</RecordType>