force-app/main/default/objects/CaseDetail__c/recordTypes/InvoiceorRechargeCollection.recordType-meta.xml
<RecordType>
    <fullName>InvoiceorRechargeCollection</fullName>
    <active>true</active>
    <label>Cobrança de Fatura ou Recarga</label>
</RecordType>