force-app/main/default/objects/CaseDetail__c/recordTypes/ProblemWithPortability.recordType-meta.xml
<RecordType>
    <fullName>ProblemWithPortability</fullName>
    <active>true</active>
    <label>Problema com Portabilidade</label>
</RecordType>